# GolfSim

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
docs/: BuildInstructions.md  Class.txt  Project Details.md  Project Details.txt  Sequence.md
include/: AtomicRingBuffer.hpp  EigenBallisticsEngine.hpp  FlightRecorder.hpp  FrameSet.hpp  GlobalLogger.hpp  HardwareSyncedCameraSystem.hpp  IBufferManager.hpp  ICameraNode.hpp  ICameraSystem.hpp  ITriggerDetector.hpp  IUsbVideoDriver.hpp  MediaFoundationDriver.hpp  OV9281CameraNode.hpp  OpenCVMomentsTracker.hpp  PlaybackCameraNode.hpp  ROIFrameDifferencing.hpp  SessionStateMachine.hpp  StereoTriangulator.hpp  TcpJsonTransmitter.hpp  ThreadManager.hpp  V4L2Driver.hpp  placeholder.txt
include/Camera/: CameraRole.hpp  FrameSet.hpp  HardwareSyncedCameraSystem.hpp  ICameraNode.hpp  ICameraSystem.hpp  OV9281CameraNode.hpp  PlaybackCameraNode.hpp
include/Diagnostics/: FlightRecorder.hpp  GlobalLogger.hpp  LogLevel.hpp
include/HAL/: IUsbVideoDriver.hpp  MediaFoundationDriver.hpp  OV9281Registers.hpp  V4L2Driver.hpp
include/Math/: AtomicRingBuffer.hpp  EigenBallisticsEngine.hpp  IBufferManager.hpp  IComputerVision.hpp  IKinematicsSolver.hpp  (+9 more)
src/: AtomicRingBuffer.cpp  EigenBallisticsEngine.cpp  FlightRecorder.cpp  FrameSet.cpp  GlobalLogger.cpp  HardwareSyncedCameraSystem.cpp  MediaFoundationDriver.cpp  OV9281CameraNode.cpp  OpenCVMomentsTracker.cpp  PlaybackCameraNode.cpp  ROIFrameDifferencing.cpp  SessionStateMachine.cpp  StereoTriangulator.cpp  TcpJsonTransmitter.cpp  ThreadManager.cpp  V4L2Driver.cpp  main.cpp
(+19 files in other folders)
